...
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:ci_gravity="center_vertical"
                android:paddingStart="16dp"
                android:paddingEnd="1dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@id/btn_left"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />


            <ProgressBar
...
                android:layout_height="30dp"
                android:visibility="visible"
                android:indeterminateTint="@color/ilv_main_color"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toLeftOf="@id/btn_right"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <ImageButton
                android:id="@+id/btn_left"
                android:layout_width="wrap_content"
...
