...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/fairy_tale_page_title"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@{viewModel.fairyTaleTitle}"
            android:gravity="center"
            android:layout_marginTop="18dp"
            android:translationZ="2dp"
...
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/translate_layout"
            >

            <TextView
                android:id="@+id/page_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="4sp"
                android:textAppearance="@style/fairytale_detail_content"
                android:text="@{viewModel.pageContent}"
                />
...
